# ITAQA-air-quality-aggregator

./: .gitignore  .style.yapf  CONTRIBUTING.md  CREDITS.md  README.md  itaqa.py  main.py  pyproject.toml  requirements.txt  run_tests.sh
ITAQA/core/: AirQualityStation.py  Pollutants.py  defs.py
ITAQA/crawler/: emilia_romagna.py  lombardia.py  piemonte.py  piemonte_rework_v2.py
ITAQA/geography/: Italy.py  converter.py
ITAQA/utils/: csv_utils.py  network_utils.py
docs/architecture/: README.md  architecture.drawio  architecture.excalidraw
itaqa/: __main__.py
itaqa/core/: AirQualityStation.py  AirQualityStationCollection.py  defs.py
itaqa/crawler/: defs.py  emilia_romagna.py  lombardia.py  piemonte.py
itaqa/geography/: Italy.py  converter.py
itaqa/gui/: AQS_viewer.py
itaqa/test/: test_AQS.py  utils.py
itaqa/test/test_data/: AQS_MountDoom.msgpack  mordor.msgpack
itaqa/utils/: AQSC_utils.py  AQS_utils.py  csv_utils.py  pandas_utils.py  serialization_utils.py
itaqa/visualization/: defs.py  plotting.py
