[tool.poetry]
name = "itaqa"
version = "0.1.0"
description = "Italy air quality data aggregator"
authors = ["Alberto Santagostino <santagostino.alb@gmail.com>, Filippo Corradino <filippo.corradino@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.6.1"
beautifulsoup4 = "4.8.2"
lxml = "4.5.0"
pandas = "1.0.1"

[tool.poetry.dev-dependencies]
ipdb = "0.13.2"
yapf = "^0.29.0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
