[tool.poetry]
name = "ITAQA-air-quality-aggregator"
version = "0.1.0"
description = "Framework to collect, aggregate and process air pollution data from different sources (Italy regions)"
authors = ["Alberto Santagostino"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "4.9.1"
lxml = "4.9.1"
msgpack = "1.0.0"
pandas = "1.1.0"
plotly = "4.9.0"
psutil = "5.7.2"
pytest = "6.0.0"
requests = "2.24.0"
PyQt5 = "5.15.0"
progressbar = "2.5"
rich = "4.2.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"
pylint = "^2.5.3"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
